# audacious-songchange

./: .cvsignore  .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README  bootstrap  configure.ac  configure.in  formatter.cc  libxmms_tracking.c  libxmms_tracking.cc  totalclean
tags/: ape.c  fmt.c  id3v1.c  id3v2.c  itunes.c  tags.c  vorbis.c  wma.c
tags/include/: ape.h  endian.h  fmt.h  id3v1.h  id3v2.h  itunes.h  tags.h  vorbis.h  wma.h
