dnl Process this file with autoconf to produce a configure script.
dnl $Id: configure.in,v 1.6 2008/02/25 16:49:43 pez Exp $
AC_PREREQ(2.52)
AC_INIT(libxmms_tracking.c)
AC_CANONICAL_TARGET([])
AM_INIT_AUTOMAKE(libxmms-tracking, 0.2.0)
AM_CONFIG_HEADER(config.h)
AM_DISABLE_STATIC
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AC_PROG_CPP
AC_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_PATH_X

dnl Do we build AUD?
make_aud=true
PKG_CHECK_MODULES(GTK, [glib-2.0 >= 2.4.0 gtk+-2.0 >= 2.4.0],
  [],
  [ AC_MSG_WARN([*** GLIB >= 2.4.0 or GTK+ >= 2.4.0 not installed - please install first *** ])
    make_aud=false
  ]
)
PKG_CHECK_MODULES(AUD, [audacious >= 0.1.1],
  [],
  [AC_MSG_WARN([*** Audacious >= 0.1.1 not installed - please install first ***])
    make_aud=false
  ]
)

dnl Make sure we're specifying at least one

if test $make_aud = false; then
  AC_MSG_ERROR([No media player specified, or none found. Cannot build.])
fi

dnl Everything else is the same

LIBS_save=$LIBS
LIBS="$LIBS $GTK_LIBS"

AC_PATH_X
AC_PATH_XTRA
if test x$have_x = xyes; then
	CFLAGS="$CFLAGS -I/usr/include/dbus-1.0 $X_CFLAGS"
fi

CPPFLAGS=$CPPFLAGS_save
LIBS=$LIBS_save

AC_OUTPUT(Makefile)
